# otus-cpp-basic-HomeWork

./: README.md  README1.txt
HW/: Untitled1.cpp
HW2/: CMakeLists.txt  example.h  hello_world.cpp
HW3/: CMakeLists.txt  inout.cpp  main.cpp  rand.cpp  rand.h  schet.cpp  schet.h
test3/: test 3.cpp
